Second attempt to prevent moving page on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ html, body {
     align-items: center;
     justify-content: center;
     gap: 20px;
+    overflow: hidden;
+}
+
+body {
+    position: relative;
 }
 
 body.light {
